# apps.core.preloaded.usb-manager

./: CMakeLists.txt  direct_set_debug.sh  set_usb_debug.sh  start_dr.sh  usb-server.sh
debian/: changelog  control  rules  usb-server.install.in  usb-server.postinst.in
include/: um_common.h  um_customize.h  um_data.h  um_main.h  um_usb_accessory_manager.h  um_usb_connection_manager.h  um_usb_host_manager.h  um_usb_notification.h  um_usb_server.h  um_usb_uevent_handler.h
packaging/: usb-manager.spec  usb-server.manifest  usb-server.rule
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro.po  (+12 more)
src/: um_common.c  um_customize.c  um_main.c  um_usb_accessory_manager.c  um_usb_connection_manager.c  um_usb_host_manager.c  um_usb_notification.c  um_usb_server.c  um_usb_uevent_handler.c
udev-rules/: 91-usb-server.rules.in
